# sona

./: .gitignore  AGENT.md  MEMORY.md  README.md  SOUL.md  USER.md  analysis_sentiment.py  analysis_sentiment.txt  analysis_timeline.py  analysis_timeline.txt  generate_interpretation.py  hottopics.py  interpretation.txt  pyproject.toml  report_html_morandi_template.html  report_html_template.py  report_html_template_fill.txt  requirements.txt
agent/: reactagent.py
cli/: display.py  event_analysis_workflow.py  hot_ui.py  interactive.py  main.py  router.py  sona 升级方案_v2.md
config/: config.yaml  model.yaml  prompt.yaml  stopwords.txt
model/: factory.py
prompt/: analysis_sentiment.txt  interpretation.txt  report_html_enhanced.txt  report_html_morandi_template.html  report_html_template_fill.txt  system_prompt.txt
scripts/: run_analysis_sentiment.py  run_analysis_timeline.py  run_author_stats.py  run_data_collect.py  run_hottopics.py  run_keyword_stats.py  run_region_stats.py  run_report_html.py  run_volume_stats.py
tools/: __init__.py  analysis_sentiment.py  analysis_timeline.py  author_stats.py  data_collect.py  data_num.py  dataset_summary.py  generate_interpretation.py  graph_rag_query.py  hottopics.py  keyword_stats.py  region_stats.py  report_html.py  report_html_template.py  volume_stats.py  yqzk.py
utils/: content_text.py  hot_topics_env.py  methodology_loader.py  prompt_loader.py
舆情深度分析/: 2024年年度舆情发展报告_清博智能.md  中国网络舆情治理年度报告_2025_人民网.md  中国舆情大事件记录（持续更新）.md  中国青年网民社会心态调查报告（2024）.md  罗永浩—西贝“预制菜”争议事件.md  舆情分析可参考的一些深度观点.md  舆情分析方法论.md  舆情分析深度研究资料.md
(+1 files in other folders)
